<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="desc"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pinItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBlack">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{desc}"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_100sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pin">

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_30sdp"
                android:backgroundTint="@color/white"
                android:hint="@string/task_title"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editText_description"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/task_description"
                android:textColorHint="@color/grey"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:background="@drawable/ic_button_default"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/ic_button_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>